# node-libsamplerate

./: .gitignore  CMakeLists.txt  Makefile  README.md  binding.gyp  index.js  package.json  post-install.js
src/: binding.cc  node-libsamplerate.cc  node-libsamplerate.h
